--- a/src/main/resources/static/layout.html
+++ b/src/main/resources/static/layout.html
@@ -11,9 +11,9 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="css/mycss.css" rel="stylesheet">
+    <link href="/css/mycss.css" rel="stylesheet">
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -84,7 +84,6 @@
 </header>
 <main>
     <div class="log-in-box">
-<!--        <p style="text-align: center; font-weight: bold; font-size: 24pt; padding-top: 30px;">지금 당장 로그인</p>-->
         <p style="margin-top:30px; margin-bottom: 5px; font-weight: bold; font-size: 12pt;">&nbsp;&nbsp;아이디</p>
         <div class="box">
             <div class="signup-button-idcheck-box"><input type="text" id="username" class="signup-input-id" placeholder="아이디"></div>
