--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -11,9 +11,9 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="css/mycss.css" rel="stylesheet">
+    <link href="/css/mycss.css" rel="stylesheet">
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -67,20 +67,6 @@
     <script>
 
         $(document).ready(function () {
-            //이페이지는 로그인 된 사람들만 보는 페이지
-            // if (localStorage.getItem("token")) {
-            //     $("#logout").css("display","block");
-            //     $("#mypage").css("display","block");
-            //     $("#login").css("display","none");
-            //     $("#username").html(localStorage.getItem("username"));
-            // } else {
-            //     //토큰이 없으면 로그아웃된 화면
-            //     $("#userMessege").empty();
-            //     $("#logout").css("display","none");
-            //     $("#mypage").css("display","none");
-            // }
-
-            //api를 호출할 때 localstorage에 값이 있으면 헤더에 토큰값을 넣어서 보내게 된다. 에러 status 마다 ... 다행
             $.ajaxPrefilter(function (options, originalOptions, jqXHR) {
                 if (localStorage.getItem('token')) {
                     jqXHR.setRequestHeader('Authorization', 'Bearer ' + localStorage.getItem('token'));
@@ -92,11 +78,11 @@
                 localStorage.removeItem("username");
                 location.href = '/';
             });
-
+            //마이페이지 처음 출력 내가 추천받은 음식
             $.ajax({
-                type:"GET",
-                url:"/mypage",
-                success:function(response) {
+                type: "GET",
+                url: "/mypage",
+                success: function (response) {
                     console.log(response)
                     // let temp = `
                     // <p>@${response['username']}</p>
@@ -105,40 +91,102 @@
                     $("#username").html(response['username']);
                     $('#usercomment').html(response['statusMessage']);
                     let profile_pic = response['profilePhoto'];
-                    $('#profile_pic').attr("src",profile_pic)
-                }
-            })
-        })
-
-        function nav1() {
-            $.ajax({
-                type:"GET",
-                url:"/mypage",
-                success:function(response) {
-                    console.log(response,"nav1에 뿌려질 정보");
+                    $('#profile_pic').attr("src", profile_pic);
+                    let temp_nav = `<div class="mypage-nav" style=" clear:left; margin-top: 30px;">
+                                    <a href="#" style="text-decoration: none;  border-bottom: 2px solid; padding-bottom: 10px; color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 추천받은 음식</strong></a>
+                                    <a href="#" onclick="nav2();" style="text-decoration: none;color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 추천한 음식</strong></a>
+                                    <a href="#" onclick="nav3();" style="text-decoration: none;color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 남긴 댓글</strong></a>
+                                    <hr style="margin-top:8px;">
+                                </div>
+                                <div id="user-nav"></div>`
+                    $('#user-table').append(temp_nav);
                     let postings = response["postings"];
                     for (let i = 0; i < postings.length; i++) {
                         let postingFoodName = postings[i]['postingFoodName']
                         let postingMemo = postings[i]['postingMemo']
                         let date = postings[i]['createdAt']
                         let temp = `
-                        <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#55595c"/>
-                            <text x="50%" y="50%" fill="#eceeef" dy=".3em">${postingFoodName}</text>
-                        </svg>
-
-                        <div class="card-body">
-                            <p class="card-text">${postingMemo}</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <small class="text-muted">${date}</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    <p>내가 추천받은 음식 : ${postingFoodName},${postingMemo},,${date}</p>
+                        `
+                        $('#user-nav').append(temp);
+                    }
+                }
+            })
+        })
+        //내가 추천받은 음식 클릭시
+        function nav1() {
+            $.ajax({
+                type:"GET",
+                url:"/mypage",
+                success:function(response) {
+                    console.log(response,"nav1에 뿌려질 정보");
+                    $('#user-table').empty();
+                    $('#user-nav').empty();
+                    let temp_nav = `<div class="mypage-nav" style=" clear:left; margin-top: 30px;">
+                                    <a href="#" style="text-decoration: none;  border-bottom: 2px solid; padding-bottom: 10px; color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 추천받은 음식</strong></a>
+                                    <a href="#" onclick="nav2();" style="text-decoration: none;color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 추천한 음식</strong></a>
+                                    <a href="#" onclick="nav3();" style="text-decoration: none;color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 남긴 댓글</strong></a>
+                                    <hr style="margin-top:8px;">
+                                </div>
+                                <div id="user-nav"></div>`
+                    $('#user-table').append(temp_nav);
+                    let postings = response["postings"];
+                    for (let i = 0; i < postings.length; i++) {
+                        let postingFoodName = postings[i]['postingFoodName']
+                        let postingMemo = postings[i]['postingMemo']
+                        let date = postings[i]['createdAt']
+                        let temp = `
+                        <p>내가 추천받은 음식: ${postingFoodName},${postingMemo},,${date}</p>
+                        `
+                        $('#user-nav').append(temp);
+                    }
+                }
+            })
+        }
+        //내가 추천한 음식 클릭시
+        function nav2() {
+            $.ajax({
+                type:"GET",
+                url:"/mypage",
+                success:function(response) {
+                    console.log(response,"nav2에 뿌려질 정보");
+                    $('#user-table').empty();
+                    $('#user-nav').empty();
+                    let temp_nav = `<div class="mypage-nav" style=" clear:left; margin-top: 30px;">
+                                    <a href="#" onclick="nav1();" style="text-decoration: none;color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 추천받은 음식</strong></a>
+                                    <a href="#" style="text-decoration: none;  border-bottom: 2px solid; padding-bottom: 10px; color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 추천한 음식</strong></a>
+                                    <a href="#" onclick="nav3();" style="text-decoration: none;color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 남긴 댓글</strong></a>
+                                    <hr style="margin-top:8px;">
+                                </div>
+                                <div id="user-nav"></div>`
+                    $('#user-table').append(temp_nav);
+                    let postings = response["postings"];
+                    for (let i = 0; i < postings.length; i++) {
+                        let postingFoodName = postings[i]['postingFoodName']
+                        let postingMemo = postings[i]['postingMemo']
+                        let date = postings[i]['createdAt']
+                        let temp = `
+                        <p>내가 추천한 음식: ${postingFoodName},${postingMemo},,${date}</p>
+                        `
+                        $('#user-nav').append(temp);
+                    }
+                }
+            })
+        }
+        //내가 남긴 댓글 클릭시
+        function nav3() {
+            $.ajax({
+                type:"GET",
+                url:"/mypage",
+                success:function(response) {
+                    console.log(response,"nav3에 뿌려질 정보");
+                    let postings = response["postings"];
+                    for (let i = 0; i < postings.length; i++) {
+                        let postingFoodName = postings[i]['postingFoodName']
+                        let postingMemo = postings[i]['postingMemo']
+                        let date = postings[i]['createdAt']
+                        let temp = `
+                        <p>내가 남긴 댓글 출력 : ${postingFoodName},${postingMemo},,${date}</p>
                         `
                         $('#user-nav').append(temp);
                     }
@@ -146,7 +194,7 @@
             })
         }
 
-
+        //포스팅 부분 테스트 나중에 삭제!
         function saveFoodRecomend() {
             let info = {
                 "postingFoodName":$("#foodname").val(),
@@ -182,10 +230,7 @@
                     <a href="/" class="nave-menu-text nav-menu">이세상 음식 전부보기</a>
                 </div>
                 <div class="nav-botton-box">
-                    <button class="nav-button" onclick="window.location.href = '/user/login'" id="login">로그인</button>
-                    <button class="nav-button" onclick="window.location.href = '/user/signup'">회원가입</button>
-                    <!--                <button class="nav-button" id="logout">로그아웃</button>-->
-                    <!--                <button class="nav-button" onclick="window.location.href = '/user/mypage'" id="mypage">마이페이지</button>-->
+                    <button class="nav-button" id="logout">로그아웃</button>
                 </div>
             </div>
         </div>
@@ -200,25 +245,17 @@
                 </span>
             </div>
             <div class="none-box" style="height: 10px; clear:left;"></div>
-            <div class="mypage-nav" style=" clear:left; margin-top: 30px;">
-                <a href="#" onclick="nav1();" style="text-decoration: none;  border-bottom: 2px solid; padding-bottom: 10px; color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 추천받은 음식</strong></a>
-                <a href="#" onclick="nav2();" style="text-decoration: none;color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 추천한 음식</strong></a>
-                <a href="#" onclick="nav3();" style="text-decoration: none;color:black; margin-right: 12px; margin-left: 10px;"><strong>내가 남긴 댓글</strong></a>
-                <hr style="margin-top:8px;">
+            <div id="user-table">
+<!--                여기에 내용 출력 공사중-->
             </div>
-
-            <div id="user-nav">추천받은 음식이 없습니다.</div>
-            포스팅 테스트
+            포스팅 테스트 (나중에 삭제)
             <input id="foodname" placeholder="음식이름">
             <input id="comment" placeholder="한마디">
             <input id="foodurl" placeholder="url">
             <input id="tagname1" placeholder="tag">
             <button onclick="saveFoodRecomend()">저장</button>
         </div>
-
-
     </main>
-
     <footer class="text-muted py-5" id="footer" style="background-color: #222529; height: 140px">
         <div class="container" >
             <p class="float-end mb-1">
