--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -12,7 +12,6 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-
     <link href="/css/mycss.css" rel="stylesheet">
 
     <!-- Bootstrap -->
@@ -20,7 +19,7 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css" integrity="sha384-7ynz3n3tAGNUYFZD3cWe5PDcE36xj85vyFkawcF6tIwxvIecqKvfwLiaFdizhPpN" crossorigin="anonymous">
     <!--파비콘-->
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon2.ico"/>
 
@@ -166,7 +165,15 @@
                         let postingMemo = postings[i]['postingMemo']
                         let date = postings[i]['createdAt']
                         let temp = `
-                        <p>내가 추천한 음식: ${postingFoodName},${postingMemo},,${date}</p>
+                                        <div style="width:275px; margin-left:5px; margin-right: 5px; border:1px solid gainsboro; border-radius: 5px; float: left">
+                                            <div class="foodimage" style='width: 275px; height: 275px; border-top-left-radius: 5px; border-top-right-radius: 5px;
+                                            /*background-image:url("/images/food_sample.jpg")*/ background-color: black' ;></div>
+                                            <div class="foodinfo" style="width: 240px; padding: 20px;">
+                                                <p style="font-size: 12pt; font-weight: bold; margin: 0 0 5px 0;">${postingFoodName}</p>
+                                                <i class="bi bi-heart" id="heart" onclick="heart()"></i>
+                                                <p style="font-size: 10pt; margin: 0px; line-height: 15pt;">${postingMemo}</p>
+                                            </div>
+                                        </div>
                         `
                         $('#user-nav').append(temp);
                     }
@@ -214,6 +221,31 @@
             })
         }
 
+        function heart() {
+            if ($("#heart").hasClass("bi-heart")) {
+                $("#heart").removeClass("bi-heart").addClass("bi-heart-fill");
+                // $.ajax({
+                //     type:"POST",
+                //     url:"/liked",
+                //     contentType: "application/json",
+                //     data:JSON.stringify(link),
+                //     success:function(response) {
+                //         $('#좋아요숫자').empty();
+                //         $.ajax({
+                //             type:"GET",
+                //             url:"/liked",
+                //             success:function(response) {
+                //                 let cnt = response['cnt']
+                //                 $('#좋아요숫자').append(cnt);
+                //             }
+                //         })
+                //     }
+                // })
+            } else {
+                $("#heart").removeClass("bi-heart-fill").addClass("bi-heart");
+            }
+        }
+
     </script>
 
 </head>
@@ -246,7 +278,7 @@
             </div>
             <div class="none-box" style="height: 10px; clear:left;"></div>
             <div id="user-table">
-<!--                여기에 내용 출력 공사중-->
+
             </div>
             포스팅 테스트 (나중에 삭제)
             <input id="foodname" placeholder="음식이름">
