--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -187,9 +187,11 @@
                 <p class="lead text-muted">간단한 질문에 답하고, 오늘의 식사를 추천 받아 보세요!</p>
                 <div id="userMessege"><div class="header"><span id="username"></span> 님의 로그인 성공!</div></div>
                 <div>
-                    <button type="button" class="main-button" data-bs-toggle="modal" data-bs-target="#SignupPlzModal"
-                            onclick="">추천하기
-                    </button>
+                    <!--                   연결은 되었으나 로그인 시 모달 안뜨게 처리 필요 -->
+                    <button class="main-button" onclick="window.location.href='/posting.html'">추천하기</button>
+                    <!--                    <button type="button" class="main-button" data-bs-toggle="modal" data-bs-target="#SignupPlzModal"-->
+                    <!--                            onclick="window.location.hef='/posting'">추천하기-->
+                    <!--                    </button>-->
                     <button class="main-button" onclick="window.location.href ='/recommend.html'">추천받기</button>
                 </div>
             </div>
