--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -111,7 +111,7 @@
                 $.ajax({
                     type: "GET",
                     url: `/likedCheck/${foodList['id']}`,
-                    // async: false,
+                    async: false,
                     success: function (response) {
                         getList2(response,foodList)
                     }
@@ -342,6 +342,57 @@
                 },
             })
         }
+
+        function change() {
+            //회원가입
+            if ($('#signUpText').css('display') == 'none') {
+                $('#signUpText').attr('style','display:inline')
+                $('#idCheckButton').attr('style','display:inline')
+                $('#help-id').attr('style','display:inline')
+                $('#help-password').attr('style','display:inline')
+                $('#emailBox').attr('style','display:block')
+                $('#signupButton').attr('style','display:block')
+                $('#kakaoLoginbutton').attr('style','display:none')
+                $('#LoginText').attr('style','display:none')
+                $('#loginButton').attr('style','display:none')
+                $('#kakaoSignupbutton').attr('style','display:block')
+                $('#toSignupButton').text('로그인')
+
+            }
+            //로그인
+            else {
+                $('#signUpText').attr('style','display:none')
+                $('#LoginText').attr('style','display:inline')
+
+                $('#idCheckButton').attr('style','display:none')
+                $('#help-id').attr('style','display:none')
+                $('#help-password').attr('style','display:none')
+                $('#emailBox').attr('style','display:none')
+                $('#signupButton').attr('style','display:none')
+                $('#kakaoLoginbutton').attr('style','display:block')
+                $('#loginButton').attr('style','display:block')
+                $('#kakaoSignupbutton').attr('style','display:none')
+
+                $('#toSignupButton').text('회원가입 하러가기')
+            }
+        }
+        function login() {
+            let info = {
+                username: $("#loginusername").val(),
+                password: $("#password").val()
+            }
+            $.ajax({
+                type: 'POST',
+                url: `/login`,
+                contentType: "application/json",
+                data: JSON.stringify(info),
+                success: function (response) {
+                    localStorage.setItem("token", response['token']);
+                    localStorage.setItem("username", response['username']);
+                    location.href = '/';
+                }
+            })
+        }
     </script>
 
 </head>
@@ -377,7 +428,8 @@
                 <div class="modal-content rounded-5 shadow">
                     <div class="modal-header p-5 pb-4 border-bottom-0">
                         <!-- <h5 class="modal-title">Modal title</h5> -->
-                        <h2 class="fw-bold mb-0">회원가입</h2>
+                        <h2 class="fw-bold mb-0" style="display: none;" id="signUpText">회원가입</h2>
+                        <h2 class="fw-bold mb-0" id="LoginText">로그인</h2>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
 
@@ -388,43 +440,39 @@
                                        placeholder="아이디">
                                 <label for="loginusername">아이디</label>
                             </div>
-                        <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" onclick="idCheck()">
+                        <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" style="display: none;" id = "idCheckButton" onclick="idCheck()">
                             아이디 중복확인
                         </button>
-                        <div class="text-muted help help-id" id="help-id">&nbsp;&nbsp;영문과 숫자 사용 가능. 2-10자 길이<br/></div>
+                        <div class="text-muted help help-id" style="display: none;" id="help-id">&nbsp;&nbsp;영문과 숫자 사용 가능. 2-10자 길이<br/></div>
                             <div class="form-floating mb-3">
                                 <input type="password" class="form-control rounded-4" id="password"
                                        placeholder="비밀번호">
                                 <label for="password">비밀번호</label>
 
                             </div>
-                        <div class="text-muted help help-password" id="help-password">&nbsp;&nbsp;영문과 숫자 필수 포함, 8-20자<br/></div>
-<!--                        <div class="form-floating mb-3">-->
-<!--                            <input type="password" class="form-control rounded-4" id="password2"-->
-<!--                                   placeholder="비밀번호">-->
-<!--                            <label for="password2">비밀번호</label>-->
+                        <div class="text-muted help help-password" style="display: none;" id="help-password">&nbsp;&nbsp;영문과 숫자 필수 포함, 8-20자<br/></div>
 
-<!--                        </div>-->
-<!--                        <div class="help help-password" id="help-password2">&nbsp;&nbsp;비밀번호를 다시 입력해주세요.<br/></div>-->
-
-                            <div class="form-floating mb-3">
+                            <div class="form-floating mb-3" style="display: none;" id="emailBox">
                                 <input type="email" class="form-control rounded-4" id="email"
                                        placeholder="이메일">
                                 <label for="email">이메일</label>
                             </div>
-                            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" onclick="signup()">회원가입하기</button>
-                            <small class="text-muted">회원가입하시면 정보 제공에 동의하시는겁니다.</small>
+                            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" style="display: none;" onclick="signup()" id="signupButton">회원가입하기</button>
+                            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" onclick="login()" id="loginButton">로그인</button>
+                            <small class="text-muted" style="display: none;" id="help-signup">회원가입하시면 정보 제공에 동의하시는겁니다.</small>
                             <hr class="my-4">
                             <h2 class="fs-5 fw-bold mb-3"></h2>
-                            <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" onclick="lok()">
+                            <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" style="display: none;" onclick="lok()" id="kakaoSignupbutton">
                                 카카오 회원가입하기
                             </button>
-                            <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
-                                <svg class="bi me-1" width="16" height="16">
-                                    <use xlink:href="#facebook"/>
-                                </svg>
-                                로그인
+                        <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" onclick="lok()" id="kakaoLoginbutton">
+                                카카오 로그인하기
                             </button>
+
+
+                        <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit" onclick="change()" id="toSignupButton">
+                            회원가입 하러가기
+                        </button>
 
 
                     </div>
